# Varuna_0

./: README.md
varuna_ui/: CMakeLists.txt  main.cpp
varuna_ui/infotainment/: infotainment-os-v15_qml_module_dir_map.qrc  qmldir
varuna_ui/python/config/: config.json
varuna_ui/python/lib/sensor_drivers/: __init__.py  dht22_driver.py  mpu6050_driver.py  sim800l_driver.py
varuna_ui/python/scripts/: read_sensors.py  send_sms_command.py
varuna_ui/qml/: Constants.qml  main.qml
varuna_ui/qml/components/: AlertBanner.qml  CommandPanel.qml  Dashboard.qml  Header.qml  SensorCard.qml  StatCard.qml  StatusIndicator.qml  WaterGauge.qml  qmldir
varuna_ui/qml/utils/: DataSimulator.qml  qmldir
varuna_ui/qmltypes/: infotainment-os-v15_foreign_types.txt
varuna_ui/resources/: resources.qrc
varuna_ui/src/backend/: Backend.cpp  Backend.h  CommandHandler.cpp  CommandHandler.h
